8815
Sorry, can't reproduce:

{code}
scala> class ArrayUser[A /*: ClassTag*/](initSize:Int) {
     |   var it: Array[A] = _
     |   initIt(initSize)
     |   def initIt(initSize:Int) { it = new Array[A](initSize) }
     | }
<console>:29: error: cannot find class tag for element type A
         def initIt(initSize:Int) { it = new Array[A](initSize) }
                                         ^
{code}

Could you please try this in REPL?
